Mostly works now. MAny additions and subtractions. Needs CSS.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="grid-container">
-        <div id="item1">Let's Generate Some Dank Memes!</div>
+        <div id="item1">You Can HAz Memze!</div>
         <div id="item2">
-            <form action="#">
+            <form action="#" id="meme-form">
                 <input type="url" id="img-url" placeholder="Paste image URL here." accept="img-link/*"><br>
                 <input type="text" id="top-text" placeholder="Top text here.."><br>
                 <input type="text" id="bottom-text" placeholder="Bottom text here.."><br>
@@ -20,17 +20,8 @@
             </form>
         </div>
         <div id="item3">
-            <canvas id="meme-canvas"></canvas>
         </div>
-        <div id="item4">Home of the collection.</div>
-        <div id="item5">
-            <div id="flex-buttons">
-                <a class="button" href="">Reset Working Image</a>
-                <a class="button" href="">Download Masterpiece</a>
-                <a class="button" href="">Clear Archive</a>
-            </div>
-        </div>
-        <div id="item6">Something about copyright probably.</div>
+        <div id="item4">Something about copyright probably.</div>
     </div>
 </body>
 </html>
